--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   permission_handler: ^11.3.1
   image_picker: ^1.0.7
   provider: ^6.1.2
+  pinput: ^4.0.0
+  local_auth: ^2.2.0
 
 
   bank_app:
